--- a/config/locales/simple_form.en.yml
+++ b/config/locales/simple_form.en.yml
@@ -9,7 +9,8 @@ en:
       # When using html, text and mark won't be used.
       # html: '<abbr title="required">*</abbr>'
     error_notification:
-      default_message: "Please review the problems below:"
+      default_message: "Por favor revisa los problemas abajo:"
+      # default_message: "Please review the problems below:"
     # Examples
     # labels:
     #   defaults:
